--- a/cs-collaboration-platform/angular.json
+++ b/cs-collaboration-platform/angular.json
@@ -27,9 +27,17 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "node_modules/font-awesome/scss/font-awesome.scss",
+              "node_modules/ng-uikit-pro-standard/assets/scss/bootstrap/bootstrap.scss",
+			  "node_modules/ng-uikit-pro-standard/assets/scss/mdb.scss", 
+			  "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+			  "node_modules/chart.js/dist/Chart.js",
+			  "node_modules/easy-pie-chart/dist/easypiechart.js",
+			  "node_modules/screenfull/dist/screenfull.js",
+			  "node_modules/hammerjs/hammer.min.js"
+			]
           },
           "configurations": {
             "production": {
