--- a/cs-collaboration-platform/package.json
+++ b/cs-collaboration-platform/package.json
@@ -20,8 +20,16 @@
     "@angular/platform-browser": "^6.0.0",
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
+    "angularfire2": "^5.0.0-rc.10",
+    "chart.js": "^2.5.0",
     "core-js": "^2.5.4",
+    "easy-pie-chart": "^2.1.7",
+    "firebase": "^5.0.4",
+    "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
+    "ng-uikit-pro-standard": "git+https://oauth2:jFsHypJsz6wRxdGsfzkg@git.mdbootstrap.com/mdb/angular/ng-uikit-pro-standard.git",
     "rxjs": "^6.0.0",
+    "screenfull": "^3.3.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
